--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,10 @@
 			<artifactId>mysql-connector-j</artifactId>
 
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
